force-app/src/objects/TR1__Master_Skill__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Master_Set_ID__c</fullName>
        <label>Master Set ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Master_Skill_Name__c</fullName>
        <label>Master Skill Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Skill_Code__c</fullName>
        <label>Skill Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <inlineHelpText>Activation/Deactivation of the master skill will have impact in other screens</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Certification</fullName>
                    <label>Certifications</label>
                </value>
                <value>
                    <fullName>Competency</fullName>
                    <label>Competencies</label>
                </value>
                <value>
                    <fullName>IT_Skill</fullName>
                    <label>IT</label>
                </value>
                <value>
                    <fullName>Language_Skill</fullName>
                    <label>Language</label>
                </value>
                <value>
                    <fullName>Professional_Skill</fullName>
                    <label>Professional / Other / Soft</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Master Skill</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>TR1__Master_Skill_Name__c</columns>
        <columns>TR1__Skill_Code__c</columns>
        <columns>TR1__Master_Set_ID__c</columns>
        <columns>TR1__Type__c</columns>
        <columns>TR1__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MS-{0000000000}</displayFormat>
        <label>Ms Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>